apps/speedtest-tracker/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: speedtest-tracker
  namespace: speedtest-tracker
spec:
  selector:
    app: speedtest-tracker
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP
